x-pack/platform/packages/shared/kbn-streams-schema/src/ottl/antlr/ottlParser.ts
// Generated from src/ottl/antlr/ottl.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import ottlListener from "./ottlListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class ottlParser extends Parser {
	public static readonly WHERE = 1;
	public static readonly NIL = 2;
	public static readonly TRUE = 3;
	public static readonly FALSE = 4;
	public static readonly NOT = 5;
	public static readonly OR = 6;
	public static readonly AND = 7;
	public static readonly GTE = 8;
	public static readonly LTE = 9;
	public static readonly EQ = 10;
	public static readonly NE = 11;
	public static readonly GT = 12;
	public static readonly LT = 13;
	public static readonly PLUS = 14;
	public static readonly MINUS = 15;
	public static readonly STAR = 16;
	public static readonly SLASH = 17;
	public static readonly EQUAL = 18;
	public static readonly DOT = 19;
	public static readonly COMMA = 20;
	public static readonly COLON = 21;
	public static readonly LPAREN = 22;
	public static readonly RPAREN = 23;
	public static readonly LBRACK = 24;
	public static readonly RBRACK = 25;
	public static readonly LBRACE = 26;
	public static readonly RBRACE = 27;
	public static readonly BYTES = 28;
	public static readonly FLOAT = 29;
	public static readonly INT = 30;
	public static readonly STRING = 31;
	public static readonly UPPERCASE_IDENTIFIER = 32;
	public static readonly LOWERCASE_IDENTIFIER = 33;
	public static readonly WHITESPACE = 34;
	public static readonly BOOLEAN = 35;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_statement = 0;
	public static readonly RULE_editor = 1;
	public static readonly RULE_converter = 2;
	public static readonly RULE_arguments = 3;
	public static readonly RULE_argument = 4;
	public static readonly RULE_whereClause = 5;
	public static readonly RULE_booleanExpression = 6;
	public static readonly RULE_term = 7;
	public static readonly RULE_booleanValue = 8;
	public static readonly RULE_constExpr = 9;
	public static readonly RULE_comparison = 10;
	public static readonly RULE_comparisonOp = 11;
	public static readonly RULE_value = 12;
	public static readonly RULE_literal = 13;
	public static readonly RULE_mathExpression = 14;
	public static readonly RULE_mathTerm = 15;
	public static readonly RULE_mathFactor = 16;
	public static readonly RULE_path = 17;
	public static readonly RULE_field = 18;
	public static readonly RULE_keys = 19;
	public static readonly RULE_key = 20;
	public static readonly RULE_enumSymbol = 21;
	public static readonly RULE_mapValue = 22;
	public static readonly RULE_mapItem = 23;
	public static readonly RULE_listValue = 24;
	public static readonly literalNames: (string | null)[] = [ null, "'where'", 
                                                            "'nil'", "'true'", 
                                                            "'false'", "'not'", 
                                                            "'or'", "'and'", 
                                                            "'>='", "'<='", 
                                                            "'=='", "'!='", 
                                                            "'>'", "'<'", 
                                                            "'+'", "'-'", 
                                                            "'*'", "'/'", 
                                                            "'='", "'.'", 
                                                            "','", "':'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "WHERE", 
                                                             "NIL", "TRUE", 
                                                             "FALSE", "NOT", 
                                                             "OR", "AND", 
                                                             "GTE", "LTE", 
                                                             "EQ", "NE", 
                                                             "GT", "LT", 
                                                             "PLUS", "MINUS", 
                                                             "STAR", "SLASH", 
                                                             "EQUAL", "DOT", 
                                                             "COMMA", "COLON", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACK", "RBRACK", 
                                                             "LBRACE", "RBRACE", 
                                                             "BYTES", "FLOAT", 
                                                             "INT", "STRING", 
                                                             "UPPERCASE_IDENTIFIER", 
                                                             "LOWERCASE_IDENTIFIER", 
                                                             "WHITESPACE", 
                                                             "BOOLEAN" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"statement", "editor", "converter", "arguments", "argument", "whereClause", 
		"booleanExpression", "term", "booleanValue", "constExpr", "comparison", 
		"comparisonOp", "value", "literal", "mathExpression", "mathTerm", "mathFactor", 
		"path", "field", "keys", "key", "enumSymbol", "mapValue", "mapItem", "listValue",
	];
	public get grammarFileName(): string { return "ottl.g4"; }
	public get literalNames(): (string | null)[] { return ottlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return ottlParser.symbolicNames; }
	public get ruleNames(): string[] { return ottlParser.ruleNames; }
	public get serializedATN(): number[] { return ottlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, ottlParser._ATN, ottlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, ottlParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 50;
			this.editor();
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 51;
				this.whereClause();
				}
			}

			this.state = 54;
			this.match(ottlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public editor(): EditorContext {
		let localctx: EditorContext = new EditorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, ottlParser.RULE_editor);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 56;
			this.match(ottlParser.LOWERCASE_IDENTIFIER);
			this.state = 57;
			this.match(ottlParser.LPAREN);
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4114612228) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 11) !== 0)) {
				{
				this.state = 58;
				this.arguments();
				}
			}

			this.state = 61;
			this.match(ottlParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public converter(): ConverterContext {
		let localctx: ConverterContext = new ConverterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, ottlParser.RULE_converter);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 63;
			this.match(ottlParser.UPPERCASE_IDENTIFIER);
			this.state = 64;
			this.match(ottlParser.LPAREN);
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4114612228) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 11) !== 0)) {
				{
				this.state = 65;
				this.arguments();
				}
			}

			this.state = 68;
			this.match(ottlParser.RPAREN);
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===24) {
				{
				{
				this.state = 69;
				this.keys();
				}
				}
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		let localctx: ArgumentsContext = new ArgumentsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, ottlParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			this.argument();
			this.state = 80;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===20) {
				{
				{
				this.state = 76;
				this.match(ottlParser.COMMA);
				this.state = 77;
				this.argument();
				}
				}
				this.state = 82;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let localctx: ArgumentContext = new ArgumentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, ottlParser.RULE_argument);
		try {
			this.state = 89;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				{
				this.state = 85;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
				case 1:
					{
					this.state = 83;
					this.match(ottlParser.LOWERCASE_IDENTIFIER);
					this.state = 84;
					this.match(ottlParser.EQUAL);
					}
					break;
				}
				this.state = 87;
				this.value();
				}
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 88;
				this.match(ottlParser.UPPERCASE_IDENTIFIER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public whereClause(): WhereClauseContext {
		let localctx: WhereClauseContext = new WhereClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, ottlParser.RULE_whereClause);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 91;
			this.match(ottlParser.WHERE);
			this.state = 92;
			this.booleanExpression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public booleanExpression(): BooleanExpressionContext {
		let localctx: BooleanExpressionContext = new BooleanExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, ottlParser.RULE_booleanExpression);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 94;
			this.term();
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6) {
				{
				{
				this.state = 95;
				this.match(ottlParser.OR);
				this.state = 96;
				this.term();
				}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let localctx: TermContext = new TermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, ottlParser.RULE_term);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 102;
			this.booleanValue();
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===7) {
				{
				{
				this.state = 103;
				this.match(ottlParser.AND);
				this.state = 104;
				this.booleanValue();
				}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public booleanValue(): BooleanValueContext {
		let localctx: BooleanValueContext = new BooleanValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, ottlParser.RULE_booleanValue);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5) {
				{
				this.state = 110;
				this.match(ottlParser.NOT);
				}
			}

			this.state = 119;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 113;
				this.comparison();
				}
				break;
			case 2:
				{
				this.state = 114;
				this.constExpr();
				}
				break;
			case 3:
				{
				this.state = 115;
				this.match(ottlParser.LPAREN);
				this.state = 116;
				this.booleanExpression();
				this.state = 117;
				this.match(ottlParser.RPAREN);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constExpr(): ConstExprContext {
		let localctx: ConstExprContext = new ConstExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, ottlParser.RULE_constExpr);
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 35:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 121;
				this.match(ottlParser.BOOLEAN);
				}
				break;
			case 32:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 122;
				this.converter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comparison(): ComparisonContext {
		let localctx: ComparisonContext = new ComparisonContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, ottlParser.RULE_comparison);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 125;
			this.value();
			this.state = 126;
			this.comparisonOp();
			this.state = 127;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comparisonOp(): ComparisonOpContext {
		let localctx: ComparisonOpContext = new ComparisonOpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, ottlParser.RULE_comparisonOp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 16128) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, ottlParser.RULE_value);
		try {
			this.state = 142;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 131;
				this.match(ottlParser.NIL);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 132;
				this.literal();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 133;
				this.mathExpression();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 134;
				this.match(ottlParser.BYTES);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 135;
				this.match(ottlParser.STRING);
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 136;
				this.match(ottlParser.BOOLEAN);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 137;
				this.enumSymbol();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 138;
				this.mapValue();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 139;
				this.listValue();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 140;
				this.converter();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 141;
				this.path();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let localctx: LiteralContext = new LiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, ottlParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 144;
			_la = this._input.LA(1);
			if(!(_la===29 || _la===30)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mathExpression(): MathExpressionContext {
		let localctx: MathExpressionContext = new MathExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, ottlParser.RULE_mathExpression);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 146;
			this.mathTerm();
			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===14 || _la===15) {
				{
				{
				this.state = 147;
				_la = this._input.LA(1);
				if(!(_la===14 || _la===15)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 148;
				this.mathTerm();
				}
				}
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mathTerm(): MathTermContext {
		let localctx: MathTermContext = new MathTermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, ottlParser.RULE_mathTerm);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this.mathFactor();
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===16 || _la===17) {
				{
				{
				this.state = 155;
				_la = this._input.LA(1);
				if(!(_la===16 || _la===17)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 156;
				this.mathFactor();
				}
				}
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mathFactor(): MathFactorContext {
		let localctx: MathFactorContext = new MathFactorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, ottlParser.RULE_mathFactor);
		try {
			this.state = 170;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 29:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 162;
				this.match(ottlParser.FLOAT);
				}
				break;
			case 30:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 163;
				this.match(ottlParser.INT);
				}
				break;
			case 33:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 164;
				this.path();
				}
				break;
			case 32:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 165;
				this.converter();
				}
				break;
			case 22:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 166;
				this.match(ottlParser.LPAREN);
				this.state = 167;
				this.mathExpression();
				this.state = 168;
				this.match(ottlParser.RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public path(): PathContext {
		let localctx: PathContext = new PathContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, ottlParser.RULE_path);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 174;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				{
				this.state = 172;
				this.match(ottlParser.LOWERCASE_IDENTIFIER);
				this.state = 173;
				this.match(ottlParser.DOT);
				}
				break;
			}
			this.state = 176;
			this.field();
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===19) {
				{
				{
				this.state = 177;
				this.match(ottlParser.DOT);
				this.state = 178;
				this.field();
				}
				}
				this.state = 183;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, ottlParser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 184;
			this.match(ottlParser.LOWERCASE_IDENTIFIER);
			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===24) {
				{
				{
				this.state = 185;
				this.keys();
				}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public keys(): KeysContext {
		let localctx: KeysContext = new KeysContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, ottlParser.RULE_keys);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 192;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 191;
					this.key();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 194;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public key(): KeyContext {
		let localctx: KeyContext = new KeyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, ottlParser.RULE_key);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 196;
			this.match(ottlParser.LBRACK);
			this.state = 202;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				{
				this.state = 197;
				this.match(ottlParser.STRING);
				}
				break;
			case 2:
				{
				this.state = 198;
				this.match(ottlParser.INT);
				}
				break;
			case 3:
				{
				this.state = 199;
				this.mathExpression();
				}
				break;
			case 4:
				{
				this.state = 200;
				this.path();
				}
				break;
			case 5:
				{
				this.state = 201;
				this.converter();
				}
				break;
			}
			this.state = 204;
			this.match(ottlParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public enumSymbol(): EnumSymbolContext {
		let localctx: EnumSymbolContext = new EnumSymbolContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, ottlParser.RULE_enumSymbol);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 206;
			this.match(ottlParser.UPPERCASE_IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
